# sigmacore

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  FEATURES_v2.0.md  HARDWARE_COMPATIBILITY.md  INTEGRATIONS.md  LICENSE.txt  MANIFEST.in  QUICKSTART.md  README.md  RELEASE.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v2.0.0.md  USER_GUIDE.md  VERSION_HISTORY.md  license_AGPL.txt  license_COMMERCIAL.txt  pyproject.toml  release.ps1  setup.py  test_all_adapters.py  test_print.py  test_quick.py  test_v1_1_0.py  test_validate.py  validate_v1_1_0_framework.py  verify_install.py  verify_v1_1_0.py
cache/: market_SPY_f8b8e3f2.pkl  market_TEST_e37cf22b.pkl
docs/: 01_getting_started.md  02_core_concepts.md  03_configuration.md  04_contraction_geometry.md  05_type_classification.md  06_api_reference.md  API_REFERENCE_v2.0.md  API_REFERENCE_v3.0.md  EXTENDING_DOMAINS.md  HARDWARE_COMPATIBILITY.md  QUICKSTART.md  USER_GUIDE.md
docs/advanced/: callbacks.md  extending.md  visualization.md
docs/archive/: DOCUMENTATION_v1.2.md
docs/domains/: financial.md  gpu.md  linguistics.md  ml.md  number_theory.md  protein.md  quantum.md
docs/releases/: CHANGELOG.md  RELEASE_NOTES_v1.2.3.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.0.2.md  RELEASE_NOTES_v3.0.0.md  VERSION_HISTORY.md
examples/llm_drift_demo/: README.md  TECHNICAL_GUIDE.md  dashboard.html  demo_guide.md  drift_simulation.py  generate_dashboard.py  simulation_results.json
examples/v1.2/: demo_advanced_features.py  demo_optimizer_state.json  demo_universal_rigor.py  reproduce_auto_opti.py  test_all_domains.py  verify_all_modules.py
examples/v2.0/: test_rigorous_physics.py
examples/v3/: demo_classification.py  demo_contraction_geometry.py  demo_formal_validation.py  demo_information_theory.py  demo_linguistics.py  demo_number_theory.py  demo_protein.py
examples/v4/: demo_climate.py  demo_diagnostics.py  demo_edge_llm.py  demo_finance.py  demo_gpu.py  demo_integrations.py  demo_magnetic.py  demo_ml_frameworks.py  demo_optimization.py  demo_quantum.py  (+2 more)
examples_v4/: debug_quantum.py  demo_climate.py  demo_diagnostics.py  demo_gpu.py  demo_quantum.py  demo_seismic.py
scripts/: build_release.bat  push_git.ps1  release.sh
sigma_c/: __init__.py  cli.py
(+127 files in other folders)
